# ChangeLog for x11-drivers/xf86-input-joystick
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-joystick/ChangeLog,v 1.87 2011/04/17 21:35:22 chithanh Exp $

  17 Apr 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xf86-input-joystick-1.5.99.901.ebuild:
  Warn about crashing bugs, upstream #26900, #35391.

*xf86-input-joystick-1.5.99.901 (06 Apr 2011)

  06 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  +xf86-input-joystick-1.5.99.901.ebuild:
  Version bump. This driver supports 1.10 xorg-server, but crashes it when
  unplugging the device (You have been warned so do not open bugs).

  24 Feb 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -xf86-input-joystick-1.4.0.ebuild, -xf86-input-joystick-1.4.1.ebuild:
  Drop old.

  11 Feb 2010; Jeroen Roovers <jer@gentoo.org>
  xf86-input-joystick-1.5.0.ebuild:
  Stable for HPPA (bug #302046).

  18 Jan 2010; Raúl Porcel <armin76@gentoo.org>
  xf86-input-joystick-1.5.0.ebuild:
  alpha/ia64/sh/sparc stable wrt #294958

  14 Jan 2010; Markus Meier <maekke@gentoo.org>
  xf86-input-joystick-1.5.0.ebuild:
  arm stable, bug #294958

  27 Dec 2009; Joseph Jezak <josejx@gentoo.org>
  xf86-input-joystick-1.5.0.ebuild:
  Marked ppc stable for bug #294958.

  15 Dec 2009; Brent Baude <ranger@gentoo.org>
  xf86-input-joystick-1.5.0.ebuild:
  Marking xf86-input-joystick-1.5.0 ppc64 stable for bug 294958

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  xf86-input-joystick-1.4.1.ebuild:
  alpha/ia64/sh/sparc stable wrt #282290

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  xf86-input-joystick-1.5.0.ebuild:
  x86 stable, bug 294958

  10 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  xf86-input-joystick-1.5.0.ebuild:
  amd64 stable wrt #294958

*xf86-input-joystick-1.5.0 (01 Nov 2009)

  01 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -xf86-input-joystick-1.4.99.2.ebuild, +xf86-input-joystick-1.5.0.ebuild: