@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST xf86-input-joystick-1.5.0.tar.bz2 283763 RMD160 9266c2772f0eeb20e8bab47e570794f2af76d7be SHA1 a9fed6827d55f59b7166185247952049b4e6d152 SHA256 718118c5d769529f604c1ff099fe637173442cf01fc40bdef7d45f4baea282a9
-DIST xf86-input-joystick-1.5.99.901.tar.bz2 297201 RMD160 93fd3b0abd1e168a558de74192a224904697cd4d SHA1 9a7919d34ec048ce57f21673dcda68450a7e17c8 SHA256 3431fc1c3937b191c24086f6ba7759ccbd04a5ed1c85fc895d77910969eedd01
+DIST xf86-input-joystick-1.6.0.tar.bz2 310552 RMD160 7c4759c6e79c5d99a1da28deb0fdd55fc77257f7 SHA1 3b9aed1b8128e1fbd947fdcdd5e16efccad1c780 SHA256 4f1c15ec7372dd340ec7e1a8ca19d75148896ee3883184c3663cbaa12cf738f1
 EBUILD xf86-input-joystick-1.5.0.ebuild 495 RMD160 1058778beacd367786f5846087f2091159e81edb SHA1 735274994db36687f1aec3a4719669eef7c21315 SHA256 d2e7e2426ac182c650eef6221491e824f4a76acf7c67f228cb769d1c828b5216
-EBUILD xf86-input-joystick-1.5.99.901.ebuild 836 RMD160 301a9eb9d20e851ce4bf240f01d18294dce8d8df SHA1 82020588456dd8c0bbb45bd348025fe919109d54 SHA256 f6d475891ccdf8958196d1132511cd241c04539bbd2a89733a9e88092c8d8736
-MISC ChangeLog 12268 RMD160 69ff51dd728ebbc5e5245dfc8112ebab84993f09 SHA1 8caff67839c65f6e212d534eed8bf9680ca53443 SHA256 4064bff351dffcc9cbcef38cfebac828a2d1ad835140b3ce3352192302e5f2d8
+EBUILD xf86-input-joystick-1.6.0.ebuild 516 RMD160 1cd74755eab04c0507ed30d0bcc97fb988ba0453 SHA1 a66ed8124f2cef26f696545ed4f4b3219bc495ca SHA256 29c00d1e3ccbb1bbefff8d20010573228955831622d191785d2ecf2b68759c11
+MISC ChangeLog 12502 RMD160 a3a027058d90cefa46042c16a1d59711d32ae28b SHA1 6d1c7f28392775b14ca6af12bb6209416e71506b SHA256 6341b9123c5d4d00f0a5614ee791b375bbd044e81990e9d915944a779237bb36
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2vPGEACgkQHB6c3gNBRYcJbwCdGhYShBADG4fNykXQcWr1TTIj
+nIYAn1o+hpgxeAXvVqi+AZfSK9FSlgaD
+=0N/9
+-----END PGP SIGNATURE-----
