@@ -1,25 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-joystick/xf86-input-joystick-1.5.99.901.ebuild,v 1.2 2011/04/17 21:35:22 chithanh Exp $
-
-EAPI=4
-inherit xorg-2
-
-DESCRIPTION="X.Org driver for joystick input devices"
-
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd"
-IUSE=""
-
-RDEPEND=">=x11-base/xorg-server-1.10"
-DEPEND="${RDEPEND}
-	x11-proto/inputproto
-	x11-proto/kbproto"
-
-pkg_postinst() {
-	xorg-2_pkg_postinst
-
-	ewarn "This driver has known crashing bugs. It may crash your X server when you"
-	ewarn "unplug the device or in other circumstances. For details, see:"
-	ewarn "https://bugs.freedesktop.org/show_bug.cgi?id=26900"
-	ewarn "https://bugs.freedesktop.org/show_bug.cgi?id=35391"
-}
